--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel": "^6.23.0",
+    "moment": "^2.24.0",
     "native-base": "^2.13.4",
     "peers": "^0.1.0",
     "react": "16.8.3",
     "react-native": "0.59.10",
+    "react-native-calendar-component": "^0.1.2",
+    "react-native-calendar-picker": "^6.0.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-slider": "^2.0.3",
@@ -24,7 +27,10 @@
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-paper": "^2.16.0",
     "react-native-picker-dropdown": "^0.1.2",
+    "react-native-picker-select": "^6.3.1",
     "react-native-reanimated": "^1.2.0",
+    "react-native-send-intent": "^1.0.30",
+    "react-native-snap-carousel": "^3.8.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-navigation-drawer": "^2.0.0",
