--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
     "babel": "^6.23.0",
     "moment": "^2.24.0",
@@ -14,6 +15,7 @@
     "peers": "^0.1.0",
     "react": "16.8.3",
     "react-native": "0.59.10",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-calendar-component": "^0.1.2",
     "react-native-calendar-picker": "^6.0.1",
     "react-native-elements": "^1.1.0",
