--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-paper": "^2.16.0",
     "react-native-picker-dropdown": "^0.1.2",
     "react-native-picker-select": "^6.3.1",
+    "react-native-pure-jwt": "^2.1.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-send-intent": "^1.0.30",
     "react-native-snap-carousel": "^3.8.0",
