--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-calendar-component": "^0.1.2",
     "react-native-calendar-picker": "^6.0.1",
     "react-native-elements": "^1.1.0",
+    "react-native-geocoding": "^0.3.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-show": "^1.0.3",
@@ -36,7 +37,8 @@
     "react-native-snap-carousel": "^3.8.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
-    "react-navigation-drawer": "^2.0.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
