--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-picker')
     implementation project(':react-native-pure-jwt')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-send-intent')
