--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-geocoding": "^0.3.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-picker": "0.28.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-show": "^1.0.3",
     "react-native-maps": "0.25.0",
@@ -39,6 +40,8 @@
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.1",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
