--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
     "babel": "^6.23.0",
+    "imagemagick": "^0.1.3",
     "moment": "^2.24.0",
     "native-base": "^2.13.4",
     "peers": "^0.1.0",
@@ -21,6 +22,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-geocoding": "^0.3.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-image-picker": "0.28.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-show": "^1.0.3",
