--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-pure-jwt": "^2.1.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-send-intent": "^1.0.30",
+    "react-native-simple-radio-button": "^2.7.3",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
